# darling-remote_cmds

./: CMakeLists.txt
domainname.tproj/: CMakeLists.txt
logger.tproj/: CMakeLists.txt
talk.tproj/: CMakeLists.txt
talkd.tproj/: CMakeLists.txt
telnet.tproj/: CMakeLists.txt
telnetd.tproj/: CMakeLists.txt  authenc.c  sys_term.c
tftp.tproj/: CMakeLists.txt
tftpd.tproj/: CMakeLists.txt
wall.tproj/: CMakeLists.txt
